# TomieChecker

./: Cargo.toml  LICENSE
src/: main.rs
src/utils/: mod.rs
