[package]
name = "TomieChecker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
semver = "1.0.24"
futures = "0.3.31"

[profile.release]
lto = true
